--- a/now.json
+++ b/now.json
@@ -1,6 +1,6 @@
 {
     "version": 2,
-    "name": "express",
+    "name": "ballerbot",
     "builds": [
         { "src": "**/*.js", "use": "@now/node" }
     ]
