--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "Telegram bot to get your sports fix.",
   "main": "index.js",
   "scripts": {
-   "start": "node index.js",
-   "dev": "now dev -d",
-   "deploy": "now -e TEL_API_TOKEN=@ballerbot_token"
+    "start": "node index.js",
+    "dev": "now dev -d",
+    "deploy": "now -e TEL_API_TOKEN=@ballerbot_token"
   },
   "author": "Luis Canales",
   "license": "ISC",
@@ -14,6 +14,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "nba": "^4.8.0"
   }
 }
