added hustlers sample response, debug mode

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "now dev -d",
+    "dev": "now dev",
+    "debug": "now dev -d",
     "deploy": "now -e TEL_API_TOKEN=@ballerbot_token"
   },
   "author": "Luis Canales",
