--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "nba": "^4.8.0"
+    "nba": "^4.8.0",
+    "table": "^5.2.3"
+  },
+  "devDependencies": {
+    "now": "^15.0.11"
   }
 }
