--- a/package.json
+++ b/package.json
@@ -5,9 +5,6 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "now dev",
-    "debug": "now dev -d",
-    "deploy": "now -e TEL_API_TOKEN=@ballerbot_token"
   },
   "author": "Luis Canales",
   "license": "ISC",
@@ -19,7 +16,5 @@
     "nba": "^4.8.0",
     "table": "^5.2.3"
   },
-  "devDependencies": {
-    "now": "^15.0.11"
-  }
+  "devDependencies": {}
 }
