--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "description": "Telegram bot to get your sports fix.",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node index.js"
   },
   "author": "Luis Canales",
   "license": "ISC",
   "dependencies": {
+    "as-table": "^1.0.38",
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
     "express": "^4.16.4",
-    "nba": "^4.8.0",
-    "table": "^5.2.3"
+    "nba": "^4.8.0"
   },
   "devDependencies": {}
 }
