--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "dotenv": "^7.0.0",
-    "express": "^4.16.4",
-    "nba": "^4.8.0"
+    "express": "^4.16.4"
   },
   "devDependencies": {}
 }
